# toxiccore

./: .coveragerc  README.md  pyproject.toml  requirements.txt  toxicbuild.yml
docs/source/: CHANGELOG.rst  conf.py  index.rst  tpp.rst
scripts/: check_coverage.sh  release.sh  run_linter.sh  upload_docs.sh
tests/: __init__.py
tests/unit/: __init__.py  test_build_config.py  test_client.py  test_cmd.py  test_conf.py  test_mail.py  test_plugins.py  test_protocol.py  test_requests.py  test_server.py  test_shell.py  test_socks.py  test_utils.py  test_vcs.py
toxiccore/: __init__.py  build_config.py  client.py  protocol.py  shell.py  utils.py  vcs.py
