[build-system]
requires = [
    "setuptools >= 65",
    "wheel >= 0.38",
]
build-backend = "setuptools.build_meta"

[project]
name = "toxiccore"
dynamic = ["version"]
authors = [
  { name="me@myself.com" },
]
description = "toxiccore: My super cool project"
readme = "README.md"

dependencies = [
    'bcrypt>=4.0.1',
    'mando>=0.7.1',
    'pyyaml>=6.0',
    'aiosmtplib>=2.0.2',
    'aiohttp>=3.8.4',
]

classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License (GPL)',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'

]


[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
include = ["toxiccore"]

[tool.setuptools.dynamic]
version = {attr = "toxiccore.__version__"}